# ndarray

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: rwn_ndarrayConfig.cmake.in
include/rwn/: ndarray.hpp
tests/: CMakeLists.txt  test.cpp
